@@ -176,7 +176,12 @@ class User implements IDBAccessObject, UserIdentity {
 	protected $mNewtalk;
 	/** @var string */
 	protected $mDatePreference;
-	/** @var string */
+	/**
+	 * @deprecated since 1.35. Instead, use User::getBlock to get the block,
+	 *  then AbstractBlock::getByName to get the blocker's name; or use the
+	 *  GetUserBlock hook to set or unset a block.
+	 * @var string|int -1 when the block is unset
+	 */
 	public $mBlockedby;
 	/** @var string */
 	protected $mHash;
@@ -196,7 +201,12 @@ class User implements IDBAccessObject, UserIdentity {
 	protected $mGlobalBlock;
 	/** @var bool */
 	protected $mLocked;
-	/** @var bool */
+	/**
+	 * @deprecated since 1.35. Instead, use User::getBlock to get the block,
+	 *  then AbstractBlock::getHideName to determine whether the block hides
+	 *  the user; or use the GetUserBlock hook to hide or unhide a user.
+	 * @var bool
+	 */
 	public $mHideName;
 	/** @var array */
 	public $mOptions;
@@ -204,7 +214,11 @@ class User implements IDBAccessObject, UserIdentity {
 	/** @var WebRequest */
 	private $mRequest;
 
-	/** @var AbstractBlock|null */
+	/**
+	 * @deprecated since 1.35. Instead, use User::getBlock to get the block;
+	 *  or the GetUserBlock hook to set or unset a block.
+	 * @var AbstractBlock|null
+	 */
 	public $mBlock;
 
 	/** @var bool */
